# leakyvec

./: .clang-tidy  CMakeLists.txt  README.md
include/leakyvec/: leakyvec.hpp
tests/: CMakeLists.txt  log-allocator.hpp  mock-allocator.hpp  test-allocators.cpp  test-leaky-vec.cpp  test-vec-wrapper.cpp  test_placeholder.cpp
